Fix padding of pages with no header at the beginning on mobile
Dev warning on mobile

--- a/_assets/css/application.scss
+++ b/_assets/css/application.scss
@@ -54,9 +54,7 @@ a, a:visited, a:hover, a:active {
 .body {
   flex: 1;
   @include mobile {
-    > :first-child {
-      margin-top: 50px;
-    }
+    margin-top: 50px;
   }
 }
 
@@ -92,4 +90,32 @@ blockquote {
   margin-left: 1em;
   padding-left: 1em;
   border-radius: 4px
+}
+
+.dev-warning {
+  @include desktop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100px;
+    font-size: 2em;
+    text-align: center;
+  }
+  background: $red-text;
+  color: white;
+  @include mobile {
+    &:not(.mobile) {
+      display: none;
+    }
+    position: relative;
+    bottom: 0.2em;
+    font-size: 60%;
+    height: 1.4em;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 0.4em;
+    margin-left: 0.5em;
+    border-radius: 0.7em
+  }
 }
