--- a/_assets/css/header.scss
+++ b/_assets/css/header.scss
@@ -31,7 +31,7 @@
         height: 32px;
         margin-right: 0.5em
       }
-      span {
+      .title {
         display: flex;
         flex-direction: column;
         line-height: 0.9;
